--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.2",
-    "nodeman": "^1.1.2"
+    "formidable": "^2.1.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.9.1",
+    "nodeman": "^1.1.2",
+    "nodemon": "^2.0.22"
   }
 }
