--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "body-parser-rawbody": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.2",
+    "react": "^18.2.0",
     "nodeman": "^1.1.2"
+    
   }
 }
