--- a/backend/package.json
+++ b/backend/package.json
@@ -13,17 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-
     "body-parser-rawbody": "^1.13.2",
     "cookie-parser": "^1.4.6",
+    "cookieparser": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
     "formidable": "^2.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.2",
-    "react": "^18.2.0",
-    "nodeman": "^1.1.2"
-    "nodemon": "^2.0.22"
+    "nodeman": "^1.1.2",
+    "nodemon": "^2.0.22",
+    "react": "^18.2.0"
   }
 }
