--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "body-parser-rawbody": "^1.13.2",
     "cookie-parser": "^1.4.6",
@@ -19,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "formidable": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
