--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,21 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@react-pdf/renderer": "^3.1.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-pdf": "^6.2.2",
+    "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.1.0",
@@ -23,7 +29,7 @@
     "recharts": "^2.5.0",
     "rsuite": "^5.31.1",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4"    
   },
   "scripts": {
     "start": "react-scripts start",
