--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-pdf": "^6.2.2",
@@ -29,7 +31,7 @@
     "recharts": "^2.5.0",
     "rsuite": "^5.31.1",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"    
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
